--- a/NetBeansProjects/MiPics/nbproject/private/private.properties
+++ b/NetBeansProjects/MiPics/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Andrew\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/home/sbsar6/.netbeans/7.0/build.properties
